--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Gawds</string>
+    <string name="github_client_id" translatable="false">c8f7c00e27aa4c85e7fd</string>
+    <string name="github_client_secret" translatable="false">32bcc720ef697242693a6221b70ba2eef5c38e8c</string>
+    <string name="redirect_url" translatable="false">googlecom://callback</string>
 </resources>
